<resources>
    <string name="app_name">FPoly Shop</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_exit_app">Exit the application</string>
    <string name="notification_exit_app">Are you sure want to exit?</string>
    <string name="notification_nullable">Not found value</string>
    <string name="check_internet_fail">Check internet connection!</string>
    <string name="results_found">Found %1$d results</string>
    <string name="message_null_result">Result is null</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="notification_delete_success">Delete favorite success</string>
    <string name="notification_delete_failed">Delete favorite failed</string>
    <string name="notification_add_favorite_success">This movie is added to favorite items</string>
    <string name="notification_add_favorite_failed">This movie already has been added</string>
    <string name="f">F</string>
    <string name="po">Po</string>
    <string name="ly">ly</string>
    <string name="search_hint">Search...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="shop"> Shop</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with">Login with:</string>
    <string name="remember_me">Remember me</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="birth">Birth day</string>
    <string name="register">Register</string>
    <string name="valid_email">Invalid Email address</string>
    <string name="valid_pass">Password should be > 8</string>
    <string name="match_pass">Password should be match</string>
    <string name="valid_null">Pls enter enough information!</string>
    <string name="phone">+84793333648</string>
    <string name="address">Address</string>
    <string name="chose_image">Chose Image</string>
    <string name="photo_library">Photo library</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="edit_profile">edit_profile</string>
    <string name="save_profile">save_profile</string>
    <string name="pls_slow">Please slow down</string>
    <string name="cancel">Cancel</string>
    <string name="login_success">Login Success</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About us</string>
    <string name="genre">Genre ></string>
    <string name="hot">Hot ></string>
    <string name="good_price"><![CDATA[Good Price >]]></string>
    <string name="vote_text">0.0</string>
    <string name="top_rated"><![CDATA[Top Rated >]]></string>
    <string name="promotion"><![CDATA[Promotion >]]></string>
    <string name="release_date">Release date</string>
    <string name="vote">Votes</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="genres">Genres</string>
    <string name="production_companies">Production companies</string>
    <string name="overview">OverView</string>
    <string name="search">Search</string>
    <string name="price_string">%1$d VND</string>
</resources>
