<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:transitionName="logo"
        android:id="@+id/logo_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bglogo1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:scaleType="centerCrop"
                android:text="@string/f"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bglogo2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:scaleType="centerCrop"
                android:text="@string/po"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bglogo3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:scaleType="centerCrop"
                android:text="@string/ly"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>