<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/scrollView"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_color="@android:color/white"
                app:civ_border_width="@dimen/dp_2"
                app:layout_constraintDimensionRatio="W,1"
                android:id="@+id/avatar"
                android:src="@drawable/placeholder_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="@dimen/dp_150"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/usernameEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/user_name"

                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <EditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameEdt" />

            <EditText
                android:id="@+id/confirm_passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEdt" />

            <EditText
                android:id="@+id/full_nameEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_mood_black_24dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_passwordEdt" />

            <EditText
                android:id="@+id/birthEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_today_black_24dp"
                android:hint="@string/birth"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_nameEdt" />

            <EditText
                android:id="@+id/phoneEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthEdt"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:layout_marginBottom="@dimen/dp_16"
                android:id="@+id/addressEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/radius_edt"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:hint="@string/address"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorSliver"
                android:textColorHint="@color/colorSliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneEdt" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:textColor="@android:color/white"
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/radius_btn"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:elevation="@dimen/dp_2"
        android:id="@+id/frameProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/homeProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/holo_red_dark" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>