<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolBarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bglogo1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chewy"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:text="@string/f"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bglogo2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chewy"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:text="@string/po"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bglogo3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chewy"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:text="@string/ly"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntur"
                android:scaleType="centerCrop"
                android:text=" Shop"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>
