<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:transitionName="logo"
            android:id="@+id/logo_linear"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bglogo1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chewy"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:text="@string/f"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_60"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bglogo2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chewy"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:text="@string/po"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_60"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bglogo3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chewy"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:text="@string/ly"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_60"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            app:tabTextColor="@color/colorBlue"
            app:tabSelectedTextColor="@color/colorOrange"
            app:tabIndicatorColor="@color/colorOrange"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>